# rs-nlpsvc

./: .gitignore  Cargo.toml  README.md
doc/: notes-2017-05.md
lib/annotated_document/: Cargo.toml
lib/annotated_document/src/: lib.rs  node_label.rs  tree_sequence.rs
lib/annotated_document/tests/: basic-test.rs
lib/nlpsvc-regex/: Cargo.toml  notes.md  test-regexes.txt
lib/nlpsvc-regex/src/: reinterp.rs
lib/nlpsvc_regex/: Cargo.toml
lib/nlpsvc_regex/src/: reinterp.rs  retrans.rs
lib/regex_tokenizer/: Cargo.toml
lib/regex_tokenizer/src/: english_rules.rs  lib.rs  regex_tokenizer.rs
util/tokenizer/: Cargo.toml
util/tokenizer/src/: dummy_tokenizer.rs  main.rs  regex_tokenizer.rs
