[package]
name = "rs-nlpsvc"
version = "0.1.0"
authors = ["Tom Cornell <tom.cornell@gmail.com>"]

[dependencies]
getopts = "0.2.4"

annotated_document = { path = "lib/annotated_document" }
nlpsvc_regex = { path = "lib/nlpsvc_regex" }
regex_tokenizer = { path = "lib/regex_tokenizer" }

[[bin]]
name = "tokenizer"
path = "util/tokenizer/src/main.rs"

[workspace]
